# konigle-test-django

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/app/: celery.py  settings.py  urls.py
app/customer/: apps.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
app/customer/management/commands/: generate_key.py
app/customer/migrations/: 0001_initial.py  0002_alter_emailsubscription_email_and_more.py
app/templates/: _base.html  index.html  login.html
docker/: Dockerfile  docker-compose.yml
widgets/src/: widgets.js
